Release/0.19.0 (#79)
* update changelog

* add xmltv infos to client, angular update

* update changelog, upgrade to v0.19.0

* update changelog, upgrade to v0.19.0, upgrade license information

* go mod update, update openapi with new xmltv endpoint

* adjust readme
